--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,15 +1,24 @@
-@import "base/variables";
 * {
-  font-family: "MuseoModerno", sans-serif;
+  font-family: 'Averta Demo PE Cutted Demo';
+  padding: 0;
+  margin: 0;
 }
-body {
-    margin: 0;
-    padding: 0;
-}
+// font-family: 'Proxima Nova';
+
 .container {
-  max-width: 950px;
+  max-width: 1200px;
   margin: 0 auto;
 }
-@import "blocks/promo";
-@import "blocks/header.scss";
-@import "blocks/buttons"
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+@import './layout/menu.scss';
+@import './layout/headline.scss';
+@import './layout/client.scss';
+@import './layout/help.scss';
+@import './layout/footer.scss';
+
+@import './media/media.scss';
